Temporary addition of user guide